--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -131,6 +131,7 @@ WordPress plugin zip-attachments:
     cve: 'http://www.openwall.com/lists/oss-security/2015/06/12/4'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2014-9735 revslider 3.0.96
 WordPress plugin revslider:
   1:
     location: ['/wp-content/plugins/revslider/revslider.php']
