--- a/yamls/roundcube.yml
+++ b/yamls/roundcube.yml
@@ -22,11 +22,14 @@
 # CVE-2014-N/A  1.0.0 http://osvdb.org/105486 http://roundcube.net/news/2014/04/07/roundcube-webmail-1.0.0-released/
 # CVE-2014-9587 1.0.4   http://roundcube.net/news/2014/12/18/update-1.0.4-released/ http://lists.roundcube.net/pipermail/announce/2014-December/000127.html
 # CVE-2015-1433 1.0.5   http://roundcube.net/news/2015/01/24/security-update-1.0.5/ http://trac.roundcube.net/ticket/1490227
+# CVE-2015-5381 1.1.2/1.0.6 https://roundcube.net/news/2015/06/05/updates-1.1.2-and-1.0.6-released/
+# CVE-2015-5382 1.1.2/1.0.6 https://roundcube.net/news/2015/06/05/updates-1.1.2-and-1.0.6-released/
+# CVE-2015-5383 1.1.2/1.0.6 https://roundcube.net/news/2015/06/05/updates-1.1.2-and-1.0.6-released/
 Roundcube:
   1:
     location: ['/program/include/iniset.php']
-    secure_version: '1.0.5'
+    secure_version: '1.1.2'
     regexp: ['define.*?RCMAIL_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1433 http://roundcube.net/news/2015/01/24/security-update-1.0.5/'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5381 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5382 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5383 https://roundcube.net/news/2015/06/05/updates-1.1.2-and-1.0.6-released/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
