--- a/yamls/impresscms.yml
+++ b/yamls/impresscms.yml
@@ -2,11 +2,11 @@
 # CVE-2010-XXXX 1.2.4   http://osvdb.org/69990
 # CVE-2012-0986 1.3.1/1.2.7 http://osvdb.org/78140 http://osvdb.org/78141 http://osvdb.org/78142 http://osvdb.org/78143 HTB23064
 # CVE-2012-0987 1.2.7   http://osvdb.org/78143 HTB23064
+# CVE-2013-XXXX 1.3.5   http://osvdb.org/96245
 # CVE-2014-1836 1.3.6   http://osvdb.org/102770 https://github.com/pedrib/PoC/blob/master/impresscms-1.3.5.txt
 # CVE-2014-4036 1.3.7   http://osvdb.org/107672
 # CVE-2014-XXXX 1.3.6   http://osvdb.org/102771
 # CVE-2014-XXXX 1.3.6   http://osvdb.org/102772
-# TODO: Confusing http://osvdb.org/96245
 ImpressCMS:
   1:
     location: ['/htdocs/include/version.php']
