--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -137,18 +137,19 @@
 # CVE-2015-3440 4.1.2   https://wordpress.org/news/2015/04/wordpress-4-1-2/
 # CVE-2015-XXXX 4.2.1   https://wordpress.org/news/2015/04/wordpress-4-2-1/ https://wpvulndb.com/vulnerabilities/7945
 # CVE-2015-3429 4.2.2   https://wordpress.org/news/2015/05/wordpress-4-2-2/ https://www.netsparker.com/cve-2015-3429-dom-xss-vulnerability-in-twenty-fifteen-wordpress-theme/
+# CVE-2015-XXXX 4.2.3   https://wordpress.org/news/2015/07/wordpress-4-2-3/
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '4.2.2'
+    secure_version: '4.2.3'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3429 https://wordpress.org/news/2015/05/wordpress-4-2-2/'
+    cve: 'https://wordpress.org/news/2015/07/wordpress-4-2-3/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '4.2.2'
+    secure_version: '4.2.3'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3429 https://wordpress.org/news/2015/05/wordpress-4-2-2/'
+    cve: 'https://wordpress.org/news/2015/07/wordpress-4-2-3/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
