--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -278,7 +278,7 @@ WordPress plugin newsletter:
     location: ['/wp-content/plugins/newsletter/plugin.php']
     secure_version: '3.8.3'
     regexp: ['define.*?NEWSLETTER_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://wpvulndb.com/vulnerabilities/7868'
+    cve: 'https://research.g0blin.co.uk/g0blin-00039/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin gravity-forms:
@@ -286,6 +286,6 @@ WordPress plugin gravity-forms:
     location: ['/wp-content/plugins/gravityforms/gravityforms.php']
     secure_version: '1.9.7'
     regexp: ['^Version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wpvulndb.com/vulnerabilities/7917'
+    cve: 'https://blog.sucuri.net/2015/04/security-advisory-xss-vulnerability-affecting-multiple-wordpress-plugins.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
