--- a/yamls/serendipity.yml
+++ b/yamls/serendipity.yml
@@ -13,11 +13,14 @@
 # CVE-2013-XXXX 1.7     http://blog.s9y.org/archives/247-Serendipity-1.7-released.html https://www.mavitunasecurity.com/xss-vulnerabilities-in-serendipity/ NS-13-003
 # CVE-2013-5670 1.7.3   http://osvdb.org/87395 http://blog.s9y.org/archives/250-Serendipity-1.7.3-released.html http://www.opensyscom.fr/Actualites/serendipity-xss-vulnerability.html
 # CVE-2015-2289 2.0.1   http://blog.s9y.org/archives/263-Serendipity-2.0.1-released.html
+# CVE-2015-XXXX 2.0.2   http://seclists.org/fulldisclosure/2015/Sep/6 http://blog.s9y.org/archives/265-Serendipity-2.0.2-Security-Fix-Release.html
+# CVE-2015-XXXX 2.0.2   http://seclists.org/fulldisclosure/2015/Sep/9 http://blog.s9y.org/archives/265-Serendipity-2.0.2-Security-Fix-Release.html
+# CVE-2015-XXXX 2.0.2   http://seclists.org/fulldisclosure/2015/Sep/10 http://blog.s9y.org/archives/265-Serendipity-2.0.2-Security-Fix-Release.html
 Serendipity:
   1:
     location: ['/serendipity_config.inc.php']
-    secure_version: '2.0.1'
+    secure_version: '2.0.2'
     regexp: ['\$serendipity.*?version.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2289 http://blog.s9y.org/archives/263-Serendipity-2.0.1-released.html'
+    cve: 'http://blog.s9y.org/archives/265-Serendipity-2.0.2-Security-Fix-Release.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
