--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -45,20 +45,41 @@
 # OC-SA-2015-002    CVE-2015-3012   7.0.5/6.0.7/5.0.19
 # OC-SA-2015-003                    7.0.5/6.0.7/5.0.19 Windows only
 # OC-SA-2015-004    CVE-2015-3013   7.0.5/6.0.7/5.0.19
+# OC-SA-2015-005    CVE-2015-4715   8.0.4/7.0.6/6.0.8
+# OC-SA-2015-006    CVE-2015-4716   8.0.4/7.0.6
+# OC-SA-2015-007    CVE-2015-4717   8.0.4/7.0.6/6.0.8
+# OC-SA-2015-008    CVE-2015-4718   8.0.4/7.0.6/6.0.8
+# OC-SA-2015-015    CVE-2015-6670   8.1.1/8.0.6/7.0.8
+ownCloud 8.1:
+  1:
+    location: ['/version.php']
+    secure_version: '8.1.1'
+    regexp: ['\$OC_VersionString.*?(?P<version>8\.1\.[0-9.]+)']
+    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-015 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6670'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+ownCloud 8.0:
+  1:
+    location: ['/version.php']
+    secure_version: '8.0.6'
+    regexp: ['\$OC_VersionString.*?(?P<version>8\.0\.[0-9.]+)']
+    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-015 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6670'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 ownCloud 7:
   1:
-    location: ['/owncloud/version.php']
-    secure_version: '7.0.5'
-    regexp: ['\$OC_VersionString.*?(?P<version>[0-9.]+)']
-    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-001 https://owncloud.org/security/advisory/?id=oc-sa-2015-002 https://owncloud.org/security/advisory/?id=oc-sa-2015-004'
+    location: ['/version.php']
+    secure_version: '7.0.8'
+    regexp: ['\$OC_VersionString.*?(?P<version>7\.[0-9.]+)']
+    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-015 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6670'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 6:
   1:
     location: ['/version.php']
-    secure_version: '6.0.7'
-    regexp: ['\$OC_VersionString.*?(?P<version>[0-9.]+)']
-    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-001 https://owncloud.org/security/advisory/?id=oc-sa-2015-002 https://owncloud.org/security/advisory/?id=oc-sa-2015-004'
+    secure_version: '6.0.8'
+    regexp: ['\$OC_VersionString.*?(?P<version>6\.[0-9.]+)']
+    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-005 https://owncloud.org/security/advisory/?id=oc-sa-2015-007 https://owncloud.org/security/advisory/?id=oc-sa-2015-008'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 5:
