--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -88,11 +88,12 @@
 # PMASA-2015-1  CVE-2015-2206   4.3.11.1/4.2.13.2/4.0.10.9
 # PMASA-2015-2  CVE-2015-3902   4.4.6.1/4.3.13.1/4.2.13.3/4.0.10.10
 # PMASA-2015-3  CVE-2015-3903   4.4.6.1/4.3.13.1/4.2.13.3/4.0.10.10
+# PMASA-2015-4  CVE-2015-6830   4.4.14.1/4.3.13.2
 phpMyAdmin:
   1:
     location: ['/libraries/Config.class.php']
-    secure_version: '4.4.6.1'
+    secure_version: '4.4.14.1'
     regexp: ['.*?PMA_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3902 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3903'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6830'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
