--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -140,18 +140,21 @@
 # CVE-2015-5622 4.2.3   https://wordpress.org/news/2015/07/wordpress-4-2-3/
 # CVE-2015-5623 4.2.3   https://wordpress.org/news/2015/07/wordpress-4-2-3/
 # CVE-2015-2213 4.2.4   https://wordpress.org/news/2015/08/wordpress-4-2-4/ https://wpvulndb.com/vulnerabilities/8126
+# TODO: CVE-2014-XXXX N/A     https://security.dxw.com/advisories/comment-form-csrf-allows-admin-impersonation-via-comments-in-wordpress-4-2-2/
+# CVE-2015-5714 4.3.1   https://wordpress.org/news/2015/09/wordpress-4-3-1/
+# CVE-2015-5715 4.3.1   https://wordpress.org/news/2015/09/wordpress-4-3-1/
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '4.2.4'
+    secure_version: '4.3.1'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2015/08/wordpress-4-2-4/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2213'
+    cve: 'https://wordpress.org/news/2015/09/wordpress-4-3-1/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5714 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5715'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '4.2.4'
+    secure_version: '4.3.1'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2015/08/wordpress-4-2-4/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2213'
+    cve: 'https://wordpress.org/news/2015/09/wordpress-4-3-1/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5714 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5715'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
