--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -50,13 +50,19 @@
 # OC-SA-2015-006    CVE-2015-4716   8.0.4/7.0.6
 # OC-SA-2015-007    CVE-2015-4717   8.0.4/7.0.6/6.0.8
 # OC-SA-2015-008    CVE-2015-4718   8.0.4/7.0.6/6.0.8
+# OC-SA-2015-009    CVE-2015-4456   Only affects ownCloud Desktop
+# OC-SA-2015-010    CVE-2015-5953   8.0.4/7.0.5
+# OC-SA-2015-011    CVE-2015-5954   8.0.4/7.0.5/6.0.9
+# OC-SA-2015-012    CVE-2015-3996   Only affects ownCloud Mobile
+# OC-SA-2015-013    CVE-2015-5955   Only affects ownCloud Mobile
+# OC-SA-2015-014    CVE-2015-6500   8.1.1/8.0.6
 # OC-SA-2015-015    CVE-2015-6670   8.1.1/8.0.6/7.0.8
 ownCloud 8.1:
   1:
     location: ['/version.php']
     secure_version: '8.1.1'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.1\.[0-9.]+)']
-    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-015 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6670'
+    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-014 https://owncloud.org/security/advisory/?id=oc-sa-2015-015 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6670 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6500'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 8.0:
@@ -64,7 +70,7 @@ ownCloud 8.0:
     location: ['/version.php']
     secure_version: '8.0.6'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.0\.[0-9.]+)']
-    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-015 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6670'
+    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-014 https://owncloud.org/security/advisory/?id=oc-sa-2015-015 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6670 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6500'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 7:
