--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -41,11 +41,12 @@
 # CVE-2015-2334 1.8.4
 # CVE-2015-2335 1.8.4
 # CVE-2015-2352 1.8.4
+# CVE-2015-4552 1.8.5   http://blog.mybb.com/2015/05/27/mybb-1-8-5-1-6-17-merge-system-1-8-5-release/
 MyBB:
   1:
     location: ['/inc/class_core.php']
-    secure_version: '1.8.4'
+    secure_version: '1.8.5'
     regexp: ['.*?public.*?\$version.*?(?P<version>[0-9.]+)']
-    cve: 'http://blog.mybb.com/2015/02/15/mybb-1-8-4-released-feature-update-security-maintenance-release/ http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2149 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2332 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2333 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2334 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2335 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2352'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-4552 http://blog.mybb.com/2015/05/27/mybb-1-8-5-1-6-17-merge-system-1-8-5-release'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
