--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -104,51 +104,57 @@
 # CVE-2014-7983 3.2.3               http://developer.joomla.org/security/579-20140302-core-xss-vulnerability.html
 # CVE-2014-7984 3.2.3               http://developer.joomla.org/security/581-20140304-core-unauthorised-logins.html
 # CVE-2015-5397 3.4.2               http://developer.joomla.org/security-centre/618-20150602-core-remote-code-execution.html
+# CVE-2015-6939 3.4.4   http://developer.joomla.org/security-centre/626-20150908-core-xss-vulnerability.html
+# CVE-2015-7297 3.4.5   http://developer.joomla.org/security-centre/628-20151001-core-sql-injection.html
+# CVE-2015-7857 3.4.5   http://developer.joomla.org/security-centre/628-20151001-core-sql-injection.html
+# CVE-2015-7858 3.4.5   http://developer.joomla.org/security-centre/628-20151001-core-sql-injection.html
+# CVE-2015-7859 3.4.5   http://developer.joomla.org/security-centre/629-20151002-core-acl-violations.html
+# CVE-2015-7899 3.4.5   http://developer.joomla.org/security-centre/630-20151003-core-acl-violations.html
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.4.2'
+    secure_version: '3.4.5'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5397 http://developer.joomla.org/security-centre/618-20150602-core-remote-code-execution.html'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7297 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7857 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7858 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7859 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7899 http://developer.joomla.org/security-centre/628-20151001-core-sql-injection.html http://developer.joomla.org/security-centre/629-20151002-core-acl-violations.html http://developer.joomla.org/security-centre/630-20151003-core-acl-violations.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.4.2'
+    secure_version: '3.4.5'
     regexp: ['[\t]<version>(?P<version>2\.5\.[0-9]{1,})']
-    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.3.6 version.'
+    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.4.5 version.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 1.7:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.4.2'
+    secure_version: '3.4.5'
     regexp: ['[\t]+public[\t|\s]\$RELEASE.*?(?P<version>1.7)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.3.6 version.'
+    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.4.5 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.6:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.4.2'
+    secure_version: '3.4.5'
     regexp: ['.*?RELEASE.*?(?P<version>1.6)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.3.6 version.'
+    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.4.5 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.5:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.4.2'
+    secure_version: '3.4.5'
     regexp: ['.*?RELEASE.*?(?P<version>1.5)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.3.6 version.'
+    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.4.5 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.0:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.4.2'
+    secure_version: '3.4.5'
     regexp: ['[\t]+var.*?RELEASE.*?(?P<version>1.0)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.3.6 version.'
+    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.4.5 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
