--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -38,7 +38,7 @@
 # https://drupal.org/SA-CORE-2015-002   CVE-2015-3233   7.38/6.36   http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3233
 # https://drupal.org/SA-CORE-2015-002   CVE-2015-3231   7.38/6.36   http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3231
 # https://drupal.org/SA-CORE-2015-003   Requested       7.39/6.37
-# https://drupal.org/SA-CORE-2015-004   Requested       7.41
+# https://drupal.org/SA-CORE-2015-004   CVE-2015-7943   7.41
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
