--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -149,13 +149,13 @@ WordPress:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
     secure_version: '4.3.1'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2015/09/wordpress-4-3-1/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5714 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5715'
+    cve: 'https://wordpress.org/news/2015/09/wordpress-4-3-1/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5714 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5715 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7989'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
     secure_version: '4.3.1'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2015/09/wordpress-4-3-1/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5714 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5715'
+    cve: 'https://wordpress.org/news/2015/09/wordpress-4-3-1/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5714 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5715 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7989'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
