--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -305,6 +305,7 @@ WordPress plugin mdc-private-message:
     cve: 'https://www.exploit-db.com/exploits/37907/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2015-4697 6.4.9.4 http://seclists.org/fulldisclosure/2015/Jun/57 http://www.openwall.com/lists/oss-security/2015/06/20/1
 WordPress plugin google-analyticator:
   1:
     location: ['/wp-content/plugins/google-analyticator/readme.txt']
