--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -125,7 +125,7 @@ WordPress plugin zip-attachments:
     location: ['/wp-content/plugins/zip-attachments/readme.txt']
     secure_version: '1.1.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.openwall.com/lists/oss-security/2015/06/12/4'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-4694'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2014-9735 revslider 3.0.96
