--- a/yamls/roundcube.yml
+++ b/yamls/roundcube.yml
@@ -25,11 +25,12 @@
 # CVE-2015-5381 1.1.2/1.0.6 https://roundcube.net/news/2015/06/05/updates-1.1.2-and-1.0.6-released/
 # CVE-2015-5382 1.1.2/1.0.6 https://roundcube.net/news/2015/06/05/updates-1.1.2-and-1.0.6-released/
 # CVE-2015-5383 1.1.2/1.0.6 https://roundcube.net/news/2015/06/05/updates-1.1.2-and-1.0.6-released/
+# CVE-2015-8105 1.1.3/1.0.7
 Roundcube:
   1:
     location: ['/program/include/iniset.php']
-    secure_version: '1.1.2'
+    secure_version: '1.1.3'
     regexp: ['define.*?RCMAIL_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5381 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5382 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5383 https://roundcube.net/news/2015/06/05/updates-1.1.2-and-1.0.6-released/'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8105'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
