--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -90,34 +90,43 @@
 # CVE-2015-8007 1.25.3/1.24.4/1.23.11 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-October/000181.html
 # CVE-2015-8008 1.25.3/1.24.4/1.23.11 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-October/000181.html
 # CVE-2015-8009 1.25.3/1.24.4/1.23.11 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-October/000181.html
+# CVE-2015-XXXX 1.26.1/1.25.4/1.24.5/1.23.12 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-December/000186.html
+MediaWiki 1.26:
+  1:
+    location: ['/includes/DefaultSettings.php']
+    secure_version: '1.26.1'
+    regexp: ['\$wgVersion.*?(?P<version>1\.26\.[0-9.]{1,})']
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-December/000186.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 MediaWiki 1.25:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.25.3'
+    secure_version: '1.25.4'
     regexp: ['\$wgVersion.*?(?P<version>1\.25\.[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8001 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8002 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8003 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8004 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8005 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8006 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8007 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8008 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8009 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-October/000181.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-December/000186.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.24:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.24.4'
+    secure_version: '1.24.5'
     regexp: ['\$wgVersion.*?(?P<version>1\.24\.[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8001 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8002 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8003 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8004 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8005 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8006 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8007 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8008 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8009 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-October/000181.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-December/000186.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.23:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.23.11'
+    secure_version: '1.23.12'
     regexp: ['\$wgVersion.*?(?P<version>1\.23\.[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8001 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8002 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8003 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8004 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8005 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8006 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8007 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8008 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8009 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-October/000181.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-December/000186.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.25.3'
+    secure_version: '1.26.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
     cve: 'MediaWiki 1.22 is end of life.'
     fingerprint: detect_general
@@ -125,7 +134,7 @@ MediaWiki 1.22:
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.25.3'
+    secure_version: '1.26.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
     cve: 'MediaWiki 1.21 is end of life.'
     fingerprint: detect_general
@@ -133,7 +142,7 @@ MediaWiki 1.21:
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.25.3'
+    secure_version: '1.26.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: 'MediaWiki 1.20.x is end of life.'
     fingerprint: detect_general
@@ -141,7 +150,7 @@ MediaWiki 1.20:
 MediaWiki 1.19:  # Will be supported until 2015 May
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.25.3'
+    secure_version: '1.26.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
     cve: 'MediaWiki 1.19.x is end of life.'
     fingerprint: detect_general
@@ -149,7 +158,7 @@ MediaWiki 1.19:  # Will be supported until 2015 May
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.25.3'
+    secure_version: '1.26.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18.x is end of life.'
     fingerprint: detect_general
