MantisBT CVE-2015-5059 and CVE-2014-9759 will be fixed in 1.3.0, which is not yet released

--- a/yamls/mantisbt.yml
+++ b/yamls/mantisbt.yml
@@ -42,11 +42,11 @@
 # CVE-2014-9571 1.2.19
 # CVE-2014-9572 1.2.19
 # CVE-2014-9573 1.2.19
-# CVE-2014-9624 1.2.19 https://www.mantisbt.org/bugs/view.php?id=17984
-# CVE-2014-9701 1.2.19 https://www.mantisbt.org/bugs/view.php?id=17362#c40613
+# CVE-2014-9624 1.2.19 https://mantisbt.org/bugs/view.php?id=17984
+# CVE-2014-9701 1.2.19 https://mantisbt.org/bugs/view.php?id=17362#c40613
 # CVE-2015-1042 1.2.19
-# CVE-2015-5059 TODO no release yet, contacted dregad 2015-07-14 https://mantisbt.org/bugs/view.php?id=19873
-# CVE-2014-9759 TODO no release yet https://mantisbt.org/bugs/view.php?id=20277 http://www.openwall.com/lists/oss-security/2016/01/02/1
+# CVE-2015-5059 1.3.0 https://mantisbt.org/bugs/view.php?id=19873
+# CVE-2014-9759 1.3.0 https://mantisbt.org/bugs/view.php?id=20277 http://www.openwall.com/lists/oss-security/2016/01/02/1
 MantisBT:
   1:
     location: ['/core/constant_inc.php']
