--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -60,20 +60,29 @@
 # OC-SA-2015-016    CVE-2015-7298   Only affects ownCloud Desktop
 # OC-SA-2015-017                    8.1.2
 # OC-SA-2015-018                    8.1.2/8.0.7/7.0.9
+# OC-SA-2016-002    CVE-2016-1499   8.2.2/8.1.5/8.0.10
+ownCloud 8.2:
+  1:
+    location: ['/version.php']
+    secure_version: '8.2.2'
+    regexp: ['\$OC_VersionString.*?(?P<version>8\.1\.[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1499 https://owncloud.org/security/advisory/?id=oC-SA-2016-002'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 ownCloud 8.1:
   1:
     location: ['/version.php']
-    secure_version: '8.1.2'
+    secure_version: '8.1.5'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.1\.[0-9.]+)']
-    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-017 https://owncloud.org/security/advisory/?id=oc-sa-2015-018'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1499 https://owncloud.org/security/advisory/?id=oC-SA-2016-002'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 8.0:
   1:
     location: ['/version.php']
-    secure_version: '8.0.7'
+    secure_version: '8.0.10'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.0\.[0-9.]+)']
-    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-018'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1499 https://owncloud.org/security/advisory/?id=oC-SA-2016-002'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 7:
