--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -723,6 +723,6 @@ WordPress plugin appointment-booking-calendar:
     location: ['/wp-content/plugins/appointment-booking-calendar/readme.txt']
     secure_version: '1.1.8'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7319'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7319 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7320'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
