MediaWiki vulnerability triage

--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -76,6 +76,7 @@
 # CVE-2015-6728 1.25.2/1.24.3/1.23.10 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-August/000179.html
 # CVE-2015-6729 1.25.2/1.24.3/1.23.10 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-August/000179.html
 # CVE-2015-6729 1.25.2/1.24.3/1.23.10 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-August/000179.html
+# CVE-2015-6730 1.25.2/1.24.3/1.23.10 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-August/000179.html
 # CVE-2015-6731 1.25.2/1.24.3/1.23.10 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-August/000179.html
 # CVE-2015-6734 1.25.2/1.24.3/1.23.10 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-August/000179.html
 # CVE-2015-6735 1.25.2/1.24.3/1.23.10 https://lists.wikimedia.org/pipermail/mediawiki-announce/2015-August/000179.html
